--- a/work/gelios/css/home.css
+++ b/work/gelios/css/home.css
@@ -1,6 +1,7 @@
 *{margin:0px;padding:0px;}
 html,body{width:100%;overflow-x:hidden;}
 #wraper{width:100%;}
+a {outline:none;}
 /*header*/
 #header {width:100%;height:145px;border-top:5px solid #40c0cb;position:relative;}
 #header #select {width:114px;height:27px;position:absolute;right:100px;top:0px;}
