--- a/work/gelios/css/about.css
+++ b/work/gelios/css/about.css
@@ -1,4 +1,4 @@
-a {outline:none;}
+a:focus {outline:none;}
 *{margin:0px;padding:0px;}
 html,body{width:100%;overflow-x:hidden;}
 #wraper{width:100%;}
