--- a/css/introduce.css
+++ b/css/introduce.css
@@ -465,3 +465,6 @@ margin-left:30px;}
 	transition:0.1s;
 
 }
+
+/*mark*/
+.mark {width:100%;height:100%;background:#fff;position:fixed;left:0;top:0;z-index:100;}
