--- a/css/introduce.css
+++ b/css/introduce.css
@@ -225,7 +225,7 @@ margin-left:30px;}
 /*个人简介样式*/
 .page1 h1 {
     margin-left:-6px;
-    /*font-family: "mf";*/
+    font-family: "mf";
 	font-size:100px;
 	color:#000;
 	letter-spacing:10px;
