--- a/css/introduce.css
+++ b/css/introduce.css
@@ -384,6 +384,7 @@ margin-left:30px;}
     margin:0;
     padding-left:20px;
     font-size:20px;
+    padding-bottom:5px;
     }
 }
 .img-responsive {display:block;}
