--- a/css/introduce.css
+++ b/css/introduce.css
@@ -473,3 +473,6 @@ margin-left:30px;}
 
 /*mark*/
 .mark {width:100%;height:100%;background:#fff;position:fixed;left:0;top:0;z-index:3000;}
+@media only screen and (max-width:768px) {
+    .mark {height:300%;}
+}
